--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -48,18 +48,18 @@ msgid "Slogan"
 msgstr "LEADERS, PRENEZ UNE LONGUEUR D'AVANCE SUR VOS CONCURRENTS !"
 
 #: /kunden/homepages/1/d612672731/htdocs/2016/tools/services.php:111
-msgid "Merde"
+msgid "SubSlogan"
 msgstr "Communication performante. Dialogue émotionnellement intelligent. Leadership inspirant."
 
 
 #: /kunden/homepages/1/d612672731/htdocs/2016/tools/services.php:120
 msgid "TemoignageService"
-msgstr "Madame Meyer, avec vos ateliers, j'ai vu toute une différenc."
-"Vous nous avez donné une certaine confiance. Merc "
-"Vous savez bien répondre et surtout vous vous ajustez aux besoins du client"
-" ... et c'est tres tres rare!"
+msgstr ""
+"Madame Meyer, avec vos ateliers, j’ai vu toute une diff&eacute;rence ! "
+"Vous nous avez donn&eacute; une certaine confiance. Merci ! "
+"Vous savez bien r&eacute;pondre et  surtout vous vous ajustez aux besoins du client … et c’est tr&egrave;s tr&egrave;s rare!"
 
-#: /kunden/homepages/1/d612672731/htdocs/2016/tools/services.php:125
+#: /kunden/homepages/1/d612672731/htdocs/2016/tool /services.php:125
 msgid "ContactezNous"
 msgstr "Contactez-nous"
 
@@ -87,14 +87,15 @@ msgid "NosServices"
 msgstr "Nos Services"
 
 #: /kunden/homepages/1/d612672731/htdocs/2016/tools/services.php:153
-msgid "ExcellenceOfCompany"
-msgstr "L'image d'excellence de votre compagnie se ternit ?"
-"Vous souhaitez gagner en productivité et réduire les coûts opér"
-"Nous offrons des ateliers innovants fondés sur une communication performante,"
-"un dialogue émotionnellement intellen "
-"et un leadership inspirant répondan &agrave; vos besoins de compétitive"
-"Une communication organisationnelle efficiente génère des bénéfices qualitatifs et quantita"
-"Faciles a insérer dans vos activités quotidiennes, nos ateliers sur mesure présent"
-"un juste équilibre entre stratégie et tactique, explications des principes et mises en pratiques immédiate "
-"transférables vous permettant de relever les défis'affaires de votre organisation."
-"Chefs d'entreprise, la valeur de votre compagnie fera un bond en avant."
+msgid "ServicePage"
+msgstr ""
+"L’image d’excellence de votre compagnie se ternit ? Vous souhaitez gagner en productivit&eacute; "
+"et r&eacute;duire les co&ucirc;ts op&eacute;rationnels ? Nous offrons des formations sous forme d’ateliers innovants "
+"fond&eacute;s sur une communication performante, un dialogue &eacute;motionnellement intelligent "
+"et un leadership inspirant répondant à vos besoins de comp&eacute;titivit&eacute. "
+"Une communication organisationnelle efficiente g&eacute;n&egrave;re des b&eacute;n&eacute;fices qualitatifs et quantitatifs. "
+"Faciles &agrave; ins&eacute;rer dans vos activit&eacute;s quotidiennes, nos ateliers sur mesure pr&eacute;sentent "
+"un juste &eacute;quilibre entre strat&eacute;gie et tactique, "
+"explications des principes et mises en pratiques imm&eacute;diatement transf&eacute;rables vous permettant "
+"de relever les d&eacute;fis d’affaires de votre organisation. "
+"Chefs d’entreprise, la valeur de votre compagnie fera un bond en avant."
